# aisb-sg

./: .gitignore  .gitmodules  CLAUDE.md  README.md  build-instructions.sh  install-uv.sh  main.py  piplist  pyproject.toml  requirements.txt
.cursor/rules/: sudo-fix-verification.mdc  sudo-triage.mdc
.devcontainer/: devcontainer.json  initialize.sh
aisb_utils/: solution_parsing.py
day0-setup/: day0_answers.py
day1-intro/: day1-answers.py  day1_answers.ipynb  day1_answers.py  day1_instructions.md  day1_solution.py  day1_test.py  llm-training-answers.md  prefill.py  w1d1_instructions.md  w1d1_solution.py  w1d1_test.py
day2-agents/: day2.3_answers.py  day2_answers.ipynb  day2_answers.py  day2_answers_control.py  day2_instructions.md  day2_sameer.py  day2_solution.py  day2_test.py  w1d2_instructions.md
day2-agents/prompts/: attack_system_prompt.txt  monitor_prompt.txt  monitor_prompt_optimized.txt
day3-inference/: DAY3_PLAN.md  d3_sh.ipynb  day3_answers.py  day3_answers_burak.py  day3_answers_guardrails  day3_answers_learn.py  day3_hatziq_answers.html  day3_hatziq_answers.py  day3_instructions.md  day3_setup.py  day3_solution.py  day3_test.py  deploy_runpod.py  poc_distillation.py  poc_guardrails.py
day4-training-and-data/: day4_answers.ipynb  day4_answers.py  day4_answers_burak.py  day4_answers_hatziq.py  day4_answers_lora.py  day4_ex2_instructions.md  day4_ex2_solution.py  day4_ex3_instructions.md  day4_ex3_solution.py  day4_instructions.md  day4_solution.py  day_4_Rome_[AISB_sg]_hatziq.ipynb  day_4_answers_hatziq_output.html  jannis.ipynb  mattia.ipynb  serve_abliterated.sh
day5-training-and-data/: day5_answers.py  day5_e2_answers.ipynb  day5_instructions.md  day5_requirements.txt  day5_solution.py
day6-infrastructure/: day6_answers.ipynb  day6_final_answers.py  day6_final_instructions.md  day6_final_solution.py  day6_final_test.py  day6_gpu_instructions.md  day6_gpu_solution.py  day6_gpubreach_answers.py  day6_gpubreach_instructions.md  day6_gpubreach_instructor_notes.md  day6_gpubreach_reference.py  day6_gpubreach_solution.py  day6_gpubreach_test.py  day6_securing_discussion.md  smoke_test.py
day7-governance/: README.md  day7_instructions.md  day7_solution.py
(+18 files in other folders)
