[project]
name = "aisb-sg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.2.0",
    "openai>=2.32.0",
    "termcolor>=3.3.0",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "transformers>=5.5.4",
]
