[project]
name = "aisb-sg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "black~=25.1.0",
    "control-arena==14.4.1",
    "ipykernel>=7.2.0",
    "ipytest>=0.14.2",
    "ipywidgets>=8.1.8",
    "libcst~=1.8.0",
    "mcp[cli]>=1.9.0",
    "protobuf>=7.34.1",
    "pyjwt>=2.9.0",
    "pytest>=9.0.3",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "sentencepiece>=0.2.1",
    "termcolor~=3.1.0",
    "torch>=2.11.0",
    "transformers>=4.57.6",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
